src/main/java/com/ikalagaming/scripting/IkalaScriptParser.java
// Generated from IkalaScriptParser.g4 by ANTLR 4.13.2
package com.ikalagaming.scripting;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({
    "all",
    "warnings",
    "unchecked",
    "unused",
    "cast",
    "CheckReturnValue",
    "this-escape"
})
public class IkalaScriptParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int BOOLEAN = 1,
            BREAK = 2,
            CASE = 3,
            CHAR = 4,
            CONTINUE = 5,
            DEFAULT = 6,
            DO = 7,
            DOUBLE = 8,
            ELSE = 9,
            EXIT = 10,
            FINAL = 11,
            FOR = 12,
            GOTO = 13,
            IF = 14,
            INT = 15,
            STRING = 16,
            SWITCH = 17,
            VOID = 18,
            WHILE = 19,
            IntegerLiteral = 20,
            FloatingPointLiteral = 21,
            BooleanLiteral = 22,
            CharacterLiteral = 23,
            StringLiteral = 24,
            NullLiteral = 25,
            Identifier = 26,
            LPAREN = 27,
            RPAREN = 28,
            LBRACE = 29,
            RBRACE = 30,
            LBRACK = 31,
            RBRACK = 32,
            SEMICOLON = 33,
            COMMA = 34,
            DOT = 35,
            ASSIGN = 36,
            GT = 37,
            LT = 38,
            NOT = 39,
            QUESTION = 40,
            COLON = 41,
            EQUAL = 42,
            LTE = 43,
            GTE = 44,
            NOTEQUAL = 45,
            AND = 46,
            OR = 47,
            INC = 48,
            DEC = 49,
            ADD = 50,
            SUB = 51,
            MUL = 52,
            DIV = 53,
            MOD = 54,
            ADD_ASSIGN = 55,
            SUB_ASSIGN = 56,
            MUL_ASSIGN = 57,
            DIV_ASSIGN = 58,
            MOD_ASSIGN = 59,
            WS = 60,
            COMMENT = 61,
            LINE_COMMENT = 62;
    public static final int RULE_literal = 0,
            RULE_primitiveType = 1,
            RULE_numericType = 2,
            RULE_referenceType = 3,
            RULE_classOrInterfaceType = 4,
            RULE_arrayType = 5,
            RULE_dims = 6,
            RULE_variableDeclaratorList = 7,
            RULE_variableDeclarator = 8,
            RULE_variableDeclaratorId = 9,
            RULE_type = 10,
            RULE_compilationUnit = 11,
            RULE_block = 12,
            RULE_blockStatements = 13,
            RULE_blockStatement = 14,
            RULE_localVariableDeclarationStatement = 15,
            RULE_localVariableDeclaration = 16,
            RULE_statement = 17,
            RULE_statementNoShortIf = 18,
            RULE_statementWithoutTrailingSubstatement = 19,
            RULE_label = 20,
            RULE_labeledStatement = 21,
            RULE_labeledStatementNoShortIf = 22,
            RULE_emptyStatement = 23,
            RULE_expressionStatement = 24,
            RULE_statementExpression = 25,
            RULE_ifThenStatement = 26,
            RULE_ifThenElseStatement = 27,
            RULE_ifThenElseStatementNoShortIf = 28,
            RULE_switchStatement = 29,
            RULE_switchBlock = 30,
            RULE_switchBlockStatementGroup = 31,
            RULE_switchLabel = 32,
            RULE_whileStatement = 33,
            RULE_whileStatementNoShortIf = 34,
            RULE_doStatement = 35,
            RULE_forStatement = 36,
            RULE_forStatementNoShortIf = 37,
            RULE_forInit = 38,
            RULE_statementExpressionList = 39,
            RULE_breakStatement = 40,
            RULE_continueStatement = 41,
            RULE_gotoStatement = 42,
            RULE_exitStatement = 43,
            RULE_primary = 44,
            RULE_primary_extension = 45,
            RULE_primary_LHS = 46,
            RULE_primary_LHS_access = 47,
            RULE_methodInvocation = 48,
            RULE_methodInvocation_extension = 49,
            RULE_methodInvocation_LHS = 50,
            RULE_argumentList = 51,
            RULE_expression = 52,
            RULE_assignment = 53,
            RULE_leftHandSide = 54,
            RULE_assignmentOperator = 55,
            RULE_conditionalExpression = 56,
            RULE_conditionalOrExpression = 57,
            RULE_conditionalAndExpression = 58,
            RULE_equalityExpression = 59,
            RULE_relationalExpression = 60,
            RULE_additiveExpression = 61,
            RULE_multiplicativeExpression = 62,
            RULE_unaryExpression = 63,
            RULE_preIncrementExpression = 64,
            RULE_preDecrementExpression = 65,
            RULE_unaryExpressionNotPlusMinus = 66,
            RULE_postfixExpression = 67,
            RULE_postIncrementExpression = 68,
            RULE_postDecrementExpression = 69,
            RULE_castExpression = 70;

    private static String[] makeRuleNames() {
        return new String[] {
            "literal",
            "primitiveType",
            "numericType",
            "referenceType",
            "classOrInterfaceType",
            "arrayType",
            "dims",
            "variableDeclaratorList",
            "variableDeclarator",
            "variableDeclaratorId",
            "type",
            "compilationUnit",
            "block",
            "blockStatements",
            "blockStatement",
            "localVariableDeclarationStatement",
            "localVariableDeclaration",
            "statement",
            "statementNoShortIf",
            "statementWithoutTrailingSubstatement",
            "label",
            "labeledStatement",
            "labeledStatementNoShortIf",
            "emptyStatement",
            "expressionStatement",
            "statementExpression",
            "ifThenStatement",
            "ifThenElseStatement",
            "ifThenElseStatementNoShortIf",
            "switchStatement",
            "switchBlock",
            "switchBlockStatementGroup",
            "switchLabel",
            "whileStatement",
            "whileStatementNoShortIf",
            "doStatement",
            "forStatement",
            "forStatementNoShortIf",
            "forInit",
            "statementExpressionList",
            "breakStatement",
            "continueStatement",
            "gotoStatement",
            "exitStatement",
            "primary",
            "primary_extension",
            "primary_LHS",
            "primary_LHS_access",
            "methodInvocation",
            "methodInvocation_extension",
            "methodInvocation_LHS",
            "argumentList",
            "expression",
            "assignment",
            "leftHandSide",
            "assignmentOperator",
            "conditionalExpression",
            "conditionalOrExpression",
            "conditionalAndExpression",
            "equalityExpression",
            "relationalExpression",
            "additiveExpression",
            "multiplicativeExpression",
            "unaryExpression",
            "preIncrementExpression",
            "preDecrementExpression",
            "unaryExpressionNotPlusMinus",
            "postfixExpression",
            "postIncrementExpression",
            "postDecrementExpression",
            "castExpression"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null,
            "'boolean'",
            "'break'",
            "'case'",
            "'char'",
            "'continue'",
            "'default'",
            "'do'",
            "'double'",
            "'else'",
            "'exit'",
            "'final'",
            "'for'",
            "'goto'",
            "'if'",
            "'int'",
            "'string'",
            "'switch'",
            "'void'",
            "'while'",
            null,
            null,
            null,
            null,
            null,
            "'null'",
            null,
            "'('",
            "')'",
            "'{'",
            "'}'",
            "'['",
            "']'",
            "';'",
            "','",
            "'.'",
            "'='",
            "'>'",
            "'<'",
            "'!'",
            "'?'",
            "':'",
            "'=='",
            "'<='",
            "'>='",
            "'!='",
            "'&&'",
            "'||'",
            "'++'",
            "'--'",
            "'+'",
            "'-'",
            "'*'",
            "'/'",
            "'%'",
            "'+='",
            "'-='",
            "'*='",
            "'/='",
            "'%='"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            "BOOLEAN",
            "BREAK",
            "CASE",
            "CHAR",
            "CONTINUE",
            "DEFAULT",
            "DO",
            "DOUBLE",
            "ELSE",
            "EXIT",
            "FINAL",
            "FOR",
            "GOTO",
            "IF",
            "INT",
            "STRING",
            "SWITCH",
            "VOID",
            "WHILE",
            "IntegerLiteral",
            "FloatingPointLiteral",
            "BooleanLiteral",
            "CharacterLiteral",
            "StringLiteral",
            "NullLiteral",
            "Identifier",
            "LPAREN",
            "RPAREN",
            "LBRACE",
            "RBRACE",
            "LBRACK",
            "RBRACK",
            "SEMICOLON",
            "COMMA",
            "DOT",
            "ASSIGN",
            "GT",
            "LT",
            "NOT",
            "QUESTION",
            "COLON",
            "EQUAL",
            "LTE",
            "GTE",
            "NOTEQUAL",
            "AND",
            "OR",
            "INC",
            "DEC",
            "ADD",
            "SUB",
            "MUL",
            "DIV",
            "MOD",
            "ADD_ASSIGN",
            "SUB_ASSIGN",
            "MUL_ASSIGN",
            "DIV_ASSIGN",
            "MOD_ASSIGN",
            "WS",
            "COMMENT",
            "LINE_COMMENT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "IkalaScriptParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public IkalaScriptParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class LiteralContext extends ParserRuleContext {
        public TerminalNode IntegerLiteral() {
            return getToken(IkalaScriptParser.IntegerLiteral, 0);
        }

        public TerminalNode FloatingPointLiteral() {
            return getToken(IkalaScriptParser.FloatingPointLiteral, 0);
        }

        public TerminalNode BooleanLiteral() {
            return getToken(IkalaScriptParser.BooleanLiteral, 0);
        }

        public TerminalNode CharacterLiteral() {
            return getToken(IkalaScriptParser.CharacterLiteral, 0);
        }

        public TerminalNode StringLiteral() {
            return getToken(IkalaScriptParser.StringLiteral, 0);
        }

        public TerminalNode NullLiteral() {
            return getToken(IkalaScriptParser.NullLiteral, 0);
        }

        public LiteralContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_literal;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterLiteral(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitLiteral(this);
        }
    }

    public final LiteralContext literal() throws RecognitionException {
        LiteralContext _localctx = new LiteralContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_literal);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 66060288L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PrimitiveTypeContext extends ParserRuleContext {
        public NumericTypeContext numericType() {
            return getRuleContext(NumericTypeContext.class, 0);
        }

        public TerminalNode BOOLEAN() {
            return getToken(IkalaScriptParser.BOOLEAN, 0);
        }

        public TerminalNode STRING() {
            return getToken(IkalaScriptParser.STRING, 0);
        }

        public PrimitiveTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_primitiveType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterPrimitiveType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitPrimitiveType(this);
        }
    }

    public final PrimitiveTypeContext primitiveType() throws RecognitionException {
        PrimitiveTypeContext _localctx = new PrimitiveTypeContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_primitiveType);
        try {
            setState(147);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case CHAR:
                case DOUBLE:
                case INT:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(144);
                        numericType();
                    }
                    break;
                case BOOLEAN:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(145);
                        match(BOOLEAN);
                    }
                    break;
                case STRING:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(146);
                        match(STRING);
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NumericTypeContext extends ParserRuleContext {
        public TerminalNode INT() {
            return getToken(IkalaScriptParser.INT, 0);
        }

        public TerminalNode CHAR() {
            return getToken(IkalaScriptParser.CHAR, 0);
        }

        public TerminalNode DOUBLE() {
            return getToken(IkalaScriptParser.DOUBLE, 0);
        }

        public NumericTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_numericType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterNumericType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitNumericType(this);
        }
    }

    public final NumericTypeContext numericType() throws RecognitionException {
        NumericTypeContext _localctx = new NumericTypeContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_numericType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(149);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & 33040L) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ReferenceTypeContext extends ParserRuleContext {
        public ClassOrInterfaceTypeContext classOrInterfaceType() {
            return getRuleContext(ClassOrInterfaceTypeContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(IkalaScriptParser.Identifier, 0);
        }

        public ArrayTypeContext arrayType() {
            return getRuleContext(ArrayTypeContext.class, 0);
        }

        public ReferenceTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_referenceType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterReferenceType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitReferenceType(this);
        }
    }

    public final ReferenceTypeContext referenceType() throws RecognitionException {
        ReferenceTypeContext _localctx = new ReferenceTypeContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_referenceType);
        try {
            setState(154);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(151);
                        classOrInterfaceType();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(152);
                        match(Identifier);
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(153);
                        arrayType();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ClassOrInterfaceTypeContext extends ParserRuleContext {
        public List<TerminalNode> Identifier() {
            return getTokens(IkalaScriptParser.Identifier);
        }

        public TerminalNode Identifier(int i) {
            return getToken(IkalaScriptParser.Identifier, i);
        }

        public List<TerminalNode> DOT() {
            return getTokens(IkalaScriptParser.DOT);
        }

        public TerminalNode DOT(int i) {
            return getToken(IkalaScriptParser.DOT, i);
        }

        public ClassOrInterfaceTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classOrInterfaceType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterClassOrInterfaceType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitClassOrInterfaceType(this);
        }
    }

    public final ClassOrInterfaceTypeContext classOrInterfaceType() throws RecognitionException {
        ClassOrInterfaceTypeContext _localctx = new ClassOrInterfaceTypeContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_classOrInterfaceType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(156);
                match(Identifier);
                setState(161);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == DOT) {
                    {
                        {
                            setState(157);
                            match(DOT);
                            setState(158);
                            match(Identifier);
                        }
                    }
                    setState(163);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ArrayTypeContext extends ParserRuleContext {
        public PrimitiveTypeContext primitiveType() {
            return getRuleContext(PrimitiveTypeContext.class, 0);
        }

        public DimsContext dims() {
            return getRuleContext(DimsContext.class, 0);
        }

        public ClassOrInterfaceTypeContext classOrInterfaceType() {
            return getRuleContext(ClassOrInterfaceTypeContext.class, 0);
        }

        public TerminalNode Identifier() {
            return getToken(IkalaScriptParser.Identifier, 0);
        }

        public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_arrayType;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterArrayType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitArrayType(this);
        }
    }

    public final ArrayTypeContext arrayType() throws RecognitionException {
        ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_arrayType);
        try {
            setState(172);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(164);
                        primitiveType();
                        setState(165);
                        dims();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(167);
                        classOrInterfaceType();
                        setState(168);
                        dims();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(170);
                        match(Identifier);
                        setState(171);
                        dims();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DimsContext extends ParserRuleContext {
        public List<TerminalNode> LBRACK() {
            return getTokens(IkalaScriptParser.LBRACK);
        }

        public TerminalNode LBRACK(int i) {
            return getToken(IkalaScriptParser.LBRACK, i);
        }

        public List<TerminalNode> RBRACK() {
            return getTokens(IkalaScriptParser.RBRACK);
        }

        public TerminalNode RBRACK(int i) {
            return getToken(IkalaScriptParser.RBRACK, i);
        }

        public DimsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dims;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterDims(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitDims(this);
        }
    }

    public final DimsContext dims() throws RecognitionException {
        DimsContext _localctx = new DimsContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_dims);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(LBRACK);
                setState(175);
                match(RBRACK);
                setState(180);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == LBRACK) {
                    {
                        {
                            setState(176);
                            match(LBRACK);
                            setState(177);
                            match(RBRACK);
                        }
                    }
                    setState(182);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class VariableDeclaratorListContext extends ParserRuleContext {
        public List<VariableDeclaratorContext> variableDeclarator() {
            return getRuleContexts(VariableDeclaratorContext.class);
        }

        public VariableDeclaratorContext variableDeclarator(int i) {
            return getRuleContext(VariableDeclaratorContext.class, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(IkalaScriptParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(IkalaScriptParser.COMMA, i);
        }

        public VariableDeclaratorListContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_variableDeclaratorList;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).enterVariableDeclaratorList(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof IkalaScriptParserListener)
                ((IkalaScriptParserListener) listener).exitVariableDeclaratorList(this);
        }
    }

    public final VariableDeclaratorListContext variableDeclaratorList()
            throws RecognitionException {
        VariableDeclaratorListContext _localctx =
                new VariableDeclaratorListContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_variableDeclaratorList);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(183);
                variableDeclarator();
                setState(188);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(184);
                            match(COMMA);
                            setState(185);
                            variableDeclarator();
                        }
                    }
                    setState(190);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class VariableDeclaratorContext extends ParserRuleContext {
        public VariableDeclaratorIdContext variableDeclaratorId() {
            return getRuleContext(VariableDeclaratorIdContext.class, 0);
        }

        public TerminalNode ASSIGN() {
            return getToken(IkalaScriptParser.ASSIGN, 0);
        }

        public ExpressionContext expression() {
            return getRuleContext(ExpressionContext.class, 0);
        }

        public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_variableDeclarator;
        }
